tests/ui/suggestions/issue-109436.stderr
error[E0277]: the trait bound `Foo: Into<_>` is not satisfied
  --> $DIR/issue-109436.rs:12:22
   |
LL |     let b: Bar = foo.into();
   |                      ^^^^ the trait `Into<_>` is not implemented for `Foo`
   |
   = note: required for `Foo` to implement `Into<Bar>`
help: consider borrowing here
   |
LL |     let b: Bar = (&foo).into();
   |                  ++   +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
